Don't overlap new stuff (top add) button if present when moving config button, fixes #19

--- a/css/plugin_config.css
+++ b/css/plugin_config.css
@@ -6,3 +6,9 @@ a.button.mini-config {
     height: 1em;
   }
 }
+.new-stuff,
+.top-add {
+  &.mini-config {
+    margin-right: 2.5em;
+  }
+}
